--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,7 +34,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "4.8.1"
+    "socket.io": "4.8.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
