--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,8 @@
     "start:prod": "node dist/main.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.998.0",
+    "@aws-sdk/s3-request-presigner": "^3.998.0",
     "@nestjs/common": "11.1.4",
     "@nestjs/core": "11.1.4",
     "@nestjs/passport": "^11.0.5",
