--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,10 +33,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-orm": "0.38.3",
+    "openai": "^6.25.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.9.2",
     "rxjs": "^7.8.1",
     "socket.io": "4.8.1",
     "zod": "^3.24.1"
