--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,6 +41,7 @@
     "resend": "^6.9.2",
     "rxjs": "^7.8.1",
     "socket.io": "4.8.1",
+    "twilio": "^5.12.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
