--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,11 +28,13 @@
     "@sentry/nestjs": "^10.39.0",
     "@talimy/database": "workspace:*",
     "@talimy/shared": "workspace:*",
+    "@trpc/server": "^11.10.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.70.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-orm": "0.38.3",
+    "ioredis": "^5.9.3",
     "openai": "^6.25.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -41,6 +43,7 @@
     "resend": "^6.9.2",
     "rxjs": "^7.8.1",
     "socket.io": "4.8.1",
+    "superjson": "^2.2.6",
     "twilio": "^5.12.2",
     "zod": "^3.24.1"
   },
