--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -3,6 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "main": "./src/index",
-  "types": "./src/index"
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
+  "scripts": {
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@talimy/shared": "workspace:*",
+    "@trpc/server": "^11.10.0",
+    "superjson": "^2.2.6",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@talimy/typescript-config": "workspace:*",
+    "typescript": "^5.9.3"
+  }
 }
