fix(web): restore next-intl turbopack alias and build shared in docker

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -16,6 +16,7 @@ COPY --from=base /app /app
 ARG APP_TARGET=web
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+RUN bun run --smol --cwd packages/shared build
 RUN bun run --smol --cwd apps/web build
 RUN test -f /app/apps/web/.next/BUILD_ID
 
