--- a/.github/workflows/cd-web.yml
+++ b/.github/workflows/cd-web.yml
@@ -34,12 +34,35 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GHCR (retry)
+        shell: bash
+        env:
+          GHCR_USERNAME: ${{ github.actor }}
+          GHCR_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -euo pipefail
+
+          login_ghcr() {
+            printf '%s' "$GHCR_PASSWORD" | docker login "${{ env.REGISTRY }}" -u "$GHCR_USERNAME" --password-stdin
+          }
+
+          for attempt in 1 2 3 4 5; do
+            echo "GHCR login attempt ${attempt}/5"
+            if login_ghcr; then
+              echo "GHCR login successful"
+              exit 0
+            fi
+
+            echo "GHCR login failed (attempt ${attempt}). Cleaning up and retrying..."
+            docker logout "${{ env.REGISTRY }}" >/dev/null 2>&1 || true
+
+            if [ "$attempt" -eq 5 ]; then
+              echo "GHCR login failed after 5 attempts"
+              exit 1
+            fi
+
+            sleep $((attempt * 10))
+          done
 
       - name: Extract Docker metadata
         id: meta
