fix(smoke): harden phase3 checks and expose trpc endpoint

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -35,4 +35,4 @@ COPY --from=build /app/packages ./packages
 
 EXPOSE 3000
 
-CMD ["bun", "run", "--smol", "--cwd", "apps/web", "start"]
+CMD ["bun", "run", "--cwd", "apps/web", "start"]
