--- a/.github/workflows/cd-web.yml
+++ b/.github/workflows/cd-web.yml
@@ -99,7 +99,7 @@ jobs:
           echo "ENTRYPOINT: $ENTRYPOINT"
           echo "WORKDIR: $WORKDIR"
 
-          if [[ "$CMD" != "bun run --cwd apps/web start" ]]; then
+          if [[ "$CMD" != "node node_modules/next/dist/bin/next start apps/web" ]]; then
             echo "Unexpected image CMD: '$CMD'"
             exit 1
           fi
