--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -34,6 +34,7 @@
     "@talimy/database": "workspace:*",
     "@talimy/shared": "workspace:*",
     "@trpc/server": "^11.10.0",
+    "nestjs-zod": "^5.1.1",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.70.0",
     "class-transformer": "^0.5.1",
