--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "tooling/*"
   ],
   "dependencies": {
-    "@sentry/nestjs": "^10.39.0",
-    "nestjs-zod": "^5.1.1"
+    "@sentry/nestjs": "^10.39.0"
   }
 }
