--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -43,13 +44,12 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@trpc/client": "^11.10.0",
     "@talimy/shared": "workspace:*",
     "@talimy/trpc": "workspace:*",
     "@talimy/ui": "workspace:*",
     "@tanstack/react-query": "^5",
-    "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-table": "^8.21.3",
+    "@trpc/client": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -70,6 +70,7 @@
     "react-phone-number-input": "^3.4.14",
     "react-resizable-panels": "^4.6.4",
     "recharts": "2.15.4",
+    "sileo": "^0.1.5",
     "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0",
     "tailwindcss-animate": "^1.0.7",
