--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,11 @@
   "scripts": {
     "typecheck": "tsc --noEmit -p tsconfig.json"
   },
+  "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1"
+  },
   "peerDependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
