--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -79,6 +79,8 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "@tailwindcss/postcss": "^4.2.0",
     "@types/node": "^25.1.0",
     "@types/react": "^19.2.10",
